--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif8266
 board = esp01_1m
 framework = arduino
+lib_deps = 
+	adafruit/DHT sensor library@^1.4.4
+	milesburton/DallasTemperature@^3.11.0
+	adafruit/Adafruit Unified Sensor@^1.1.7
