--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.4
 	milesburton/DallasTemperature@^3.11.0
 	adafruit/Adafruit Unified Sensor@^1.1.7
+	adafruit/Adafruit NeoPixel @ ^1.11.0
