--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	milesburton/DallasTemperature@^3.11.0
 	adafruit/Adafruit Unified Sensor@^1.1.7
 	adafruit/Adafruit NeoPixel @ ^1.11.0
+	tzapu/WiFiManager @ ^0.16.0
