--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -8,13 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp01_1m]
-platform = espressif8266
-board = esp01_1m
+[env:fm-devkit]
+platform = espressif32
+board = fm-devkit
 framework = arduino
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.4
 	milesburton/DallasTemperature@^3.11.0
 	adafruit/Adafruit Unified Sensor@^1.1.7
 	adafruit/Adafruit NeoPixel @ ^1.11.0
-	tzapu/WiFiManager @ ^0.16.0
